# VidExplainAgent

./: .gitignore  ACADEMIC_PAPER.md  CLEANUP_SUMMARY.md  README.md  docker-compose.yml  gemini.py  main.py  output.txt  pyproject.toml
Demo/: README.md
backend/: Dockerfile  requirements.txt
backend/db/c0a1bb0f-a525-4a78-87e5-f117e45b3510/: index_metadata.pickle
backend/history/11c93ed7-b14a-4db5-a2cd-91b41d20b4b1/: gemini_extraction_parsed.json  gemini_extraction_raw_output.txt
backend/history/2e95481e-b121-43dd-81c2-0c748b4bff0d/: gemini_extraction_parsed.json  gemini_extraction_raw_output.txt
backend/history/979246dd-b226-483a-b232-548263f54c3d/: gemini_extraction_parsed.json  gemini_extraction_raw_output.txt
backend/src/: explanation_synthesis.py  ingestion_pipeline.py  main.py
evaluation/: RAGAS_TEST_GUIDE.md  README.md  requirements.txt
evaluation/data/ground_truth/: manual_annotations.json  qa_pairs.json  (+1 more)
evaluation/results/: COMPLETE_EVALUATION_REPORT.md  FINAL_METRICS_TABLE.txt  component_scores.json  ragas_scores.json  system_generated_descriptions.json  system_responses.json
evaluation/scripts/: extract_visual_descriptions.py  generate_system_outputs.py  run_all_evaluations.py  run_component_eval.py  run_rag_eval.py  run_ragas_simple.py
evaluation/src/: __init__.py  component_eval.py  human_eval.py  rag_eval.py  utils.py  visualization.py
evaluation/templates/: evaluation_report.tex  human_eval_form.md
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  page.tsx
(+197 files in other folders)
