[project]
name = "videxplainagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "aiofiles>=23.0.0",
    "chromadb>=0.4.22",
    "edge-tts>=7.2.3",
    "fastapi>=0.100.0",
    "google-genai>=1.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=5.1.2",
    "uvicorn[standard]>=0.23.0",
]
